@@ -2,8 +2,11 @@
 * 0.1.15
 *
 
+- Fixed server crash at forced poll time
 - Fixed critical bug in upgrade script starter under UNIX
 - Added support of HDD temperature monitoring under Windows and Linux
+- Added PhysicalDisk.Model, PhysicalDisk.SerialNumber and
+  PhysicalDisk.Firmware parameters under Windows
 
 
 *
